drbd-9.0.25-2/drbd/.compat_test.4.18.20/need_make_request_recursion.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/need_make_request_recursion.c:4:12: warning: missing terminating ' character
 # error Don't need recursion
            ^
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/need_make_request_recursion.c:4:3: error: #error Don't need recursion
 # error Don't need recursion
   ^~~~~
